; ModuleID = '/home/carl/AnghaBench/git/extr_unpack-trees.c_verify_absent_sparse.c'
source_filename = "/home/carl/AnghaBench/git/extr_unpack-trees.c_verify_absent_sparse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cache_entry = type { i32 }
%struct.unpack_trees_options = type { i32 }

@ERROR_WOULD_LOSE_UNTRACKED_OVERWRITTEN = common dso_local global i32 0, align 4
@ERROR_WOULD_LOSE_ORPHANED_OVERWRITTEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cache_entry*, i32, %struct.unpack_trees_options*)* @verify_absent_sparse to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @verify_absent_sparse(%struct.cache_entry* %0, i32 %1, %struct.unpack_trees_options* %2) #0 {
  %4 = alloca %struct.cache_entry*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.unpack_trees_options*, align 8
  %7 = alloca i32, align 4
  store %struct.cache_entry* %0, %struct.cache_entry** %4, align 8
  store i32 %1, i32* %5, align 4
  store %struct.unpack_trees_options* %2, %struct.unpack_trees_options** %6, align 8
  %8 = load i32, i32* %5, align 4
  store i32 %8, i32* %7, align 4
  %9 = load i32, i32* %7, align 4
  %10 = load i32, i32* @ERROR_WOULD_LOSE_UNTRACKED_OVERWRITTEN, align 4
  %11 = icmp eq i32 %9, %10
  br i1 %11, label %12, label %14

12:                                               ; preds = %3
  %13 = load i32, i32* @ERROR_WOULD_LOSE_ORPHANED_OVERWRITTEN, align 4
  store i32 %13, i32* %7, align 4
  br label %14

14:                                               ; preds = %12, %3
  %15 = load %struct.cache_entry*, %struct.cache_entry** %4, align 8
  %16 = load i32, i32* %7, align 4
  %17 = load %struct.unpack_trees_options*, %struct.unpack_trees_options** %6, align 8
  %18 = call i32 @verify_absent_1(%struct.cache_entry* %15, i32 %16, %struct.unpack_trees_options* %17)
  ret i32 %18
}

declare dso_local i32 @verify_absent_1(%struct.cache_entry*, i32, %struct.unpack_trees_options*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
